--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>首页 - 纳米源</title>
+<title>纳米源 - Hugo's Blog</title>
 <meta name="keywords" content="nmyuan">
-<meta name="description" content="nmyuan.com">
+<meta name="description" content="nmyuan">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/nprogress.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 
-<link rel="apple-touch-icon-precomposed" href="images/icon.png">
+<link rel="apple-touch-icon-precomposed" href="images/yuan.ico">
 
 <link rel="shortcut icon" href="images/yuan.ico">
 <script src="js/jquery-2.1.4.min.js"></script>
@@ -28,10 +28,10 @@
 <div class="container">
   <div class="header-topbar hidden-xs link-border">
 	<ul class="site-nav topmenu">
-		<li><a href="http://weqan.cn" >维千网</a></li>
-		<li><a href="https://github.com/weqan" title="GitHub" >
+		<li><a href="http://weqan.cn" title="一个视频学习网站" target="_blank" >维千网</a></li>
+		<li><a href="https://github.com/weqan" title="GitHub" target="_blank" >
 			<i class="fa fa-github">
-			</i> GitHub
+			</i> 我的GitHub
 		</a></li>
 	</ul>
 			 勤记录 懂分享</div>
@@ -186,7 +186,7 @@
 <div class="widget widget_sentence">
   <h3>友情链接</h3>
   <div class="widget-sentence-link">
-	<a href="#" title="网站建设" target="_blank" >网站建设</a>&nbsp;&nbsp;&nbsp;
+	<a href="http://weqan.cn" title="一个视频学习网站" target="_blank" >维千网</a>&nbsp;&nbsp;&nbsp;
   </div>
 </div>
 </aside>
@@ -194,7 +194,7 @@
 
 <footer class="footer">
 <div class="container">
-<p>Copyright &copy; 2019 nmyuan.com</p>
+<p>Copyright &copy; 2019 Weqan</p>
 </div>
 <div id="gotop"><a class="gotop"></a></div>
 </footer>
