--- a/list.html
+++ b/list.html
@@ -5,9 +5,9 @@
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>博文 - 纳米源</title>
+<title>博文列表 - 纳米源</title>
 <meta name="keywords" content="nmyuan">
-<meta name="description" content="nmyuan.com">
+<meta name="description" content="nmyuan">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/nprogress.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -31,7 +31,7 @@
 		<li><a href="http://weqan.cn" >维千网</a></li>
 		<li><a href="https://github.com/weqan" title="GitHub" >
 			<i class="fa fa-github">
-			</i> GitHub
+			</i> 我的GitHub
 		</a></li>
 	</ul>
 			 勤记录 懂分享</div>
@@ -80,7 +80,7 @@
 		</p>
 		<p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
 	</article>
-  <article class="excerpt excerpt-2" style=""><a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
+  <article class="excerpt excerpt-2"><a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
 		<header><a class="cat" href="#" title="MZ-NetBlog主题" >MZ-NetBlog主题<i></i></a>
 			<h2><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" >用DTcms做一个独立博客网站（响应式模板）</a>
 			</h2>
@@ -160,7 +160,7 @@
 
 <footer class="footer">
 <div class="container">
-<p>Copyright &copy; 2019 nmyuan.com</p>
+<p>Copyright &copy; 2019 Weqan</p>
 </div>
 <div id="gotop"><a class="gotop"></a></div>
 </footer>
