--- a/list.html
+++ b/list.html
@@ -160,7 +160,7 @@
 
 <footer class="footer">
 <div class="container">
-<p>Copyright &copy; 2019 Weqan</p>
+<p>Copyright &copy; 2019.Weqan</p>
 </div>
 <div id="gotop"><a class="gotop"></a></div>
 </footer>
