--- a/list.html
+++ b/list.html
@@ -1,173 +1,203 @@
 <!doctype html>
 <html lang="zh-CN">
+
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>博文列表 - 纳米源</title>
-<meta name="keywords" content="nmyuan">
-<meta name="description" content="nmyuan">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/nprogress.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<meta charset="utf-8">
+	<meta name="renderer" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>文章列表 - 纳米源</title>
+	<meta name="keywords" content="nmyuan">
+	<meta name="description" content="nmyuan">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/nprogress.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 
-<link rel="apple-touch-icon-precomposed" href="images/icon.png">
+	<link rel="apple-touch-icon-precomposed" href="images/icon.png">
 
-<link rel="shortcut icon" href="images/yuan.ico">
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/nprogress.js"></script>
-<script src="js/jquery.lazyload.min.js"></script>
+	<link rel="shortcut icon" href="images/yuan.ico">
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/nprogress.js"></script>
+	<script src="js/jquery.lazyload.min.js"></script>
 
 
 </head>
+
 <body class="user-select">
-<header class="header">
-<nav class="navbar navbar-default" id="navbar">
-<div class="container">
-  <div class="header-topbar hidden-xs link-border">
-	<ul class="site-nav topmenu">
-		<li><a href="http://weqan.cn" >维千网</a></li>
-		<li><a href="https://github.com/weqan" title="GitHub" >
-			<i class="fa fa-github">
-			</i> 我的GitHub
-		</a></li>
-	</ul>
-			 勤记录 懂分享</div>
-  <div class="navbar-header">
+	<header class="header">
+		<nav class="navbar navbar-default" id="navbar">
+			<div class="container">
+				<div class="header-topbar hidden-xs link-border">
+					<ul class="site-nav topmenu">
+						<li><a href="http://weqan.cn">维千网</a></li>
+						<li><a href="https://github.com/weqan" title="GitHub">
+								<i class="fa fa-github">
+								</i> 我的GitHub
+							</a></li>
+					</ul>
+					勤记录 懂分享
+				</div>
+				<div class="navbar-header">
 
-	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar" aria-expanded="false"> <span class="sr-only"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar"
+						aria-expanded="false"> <span class="sr-only"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> </button>
 
-	<h1 class="logo hvr-bounce-in"><a href="#" title="木庄网络博客"><img src="images/201610171329086541.png" alt="木庄网络博客"></a></h1>
-  </div>
-  <div class="collapse navbar-collapse" id="header-navbar">
-	<form class="navbar-form visible-xs" action="/Search" method="post">
-	  <div class="input-group">
-		<input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20" autocomplete="off">
-		<span class="input-group-btn">
-		<button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
-		</span> </div>
-	</form>
-	<ul class="nav navbar-nav navbar-right">
-	  <li><a data-cont="纳米源" title="纳米源" href="index.html">首页</a></li>
-	  <li><a data-cont="我的笔记" title="我的笔记" href="#" >我的笔记</a></li>
-	  <li><a data-cont="源码分享" title="源码分享" href="#" >源码分享</a></li>
-	  <li><a data-cont="资讯分享" title="资讯分享" href="#" >资讯分享</a></li>
-	</ul>
-  </div>
-</div>
-</nav>
-</header>
+					<h1 class="logo hvr-bounce-in"><a href="#" title="木庄网络博客"><img src="images/201610171329086541.png"
+								alt="木庄网络博客"></a></h1>
+				</div>
+				<div class="collapse navbar-collapse" id="header-navbar">
+					<form class="navbar-form visible-xs" action="/Search" method="post">
+						<div class="input-group">
+							<input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20"
+								autocomplete="off">
+							<span class="input-group-btn">
+								<button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+							</span> </div>
+					</form>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a data-cont="纳米源" title="纳米源" href="index.html">首页</a></li>
+						<li><a data-cont="我的笔记" title="我的笔记" href="#">我的笔记</a></li>
+						<li><a data-cont="源码分享" title="源码分享" href="#">源码分享</a></li>
+						<li><a data-cont="资讯分享" title="资讯分享" href="#">资讯分享</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 
-<section class="container">
-<div class="content-wrap">
-<div class="content">
-  <div id="focusslide" class="carousel slide" data-ride="carousel">
-  <div class="title">
-	<h3>最新发布</h3>
-	</div>
-	
-  <article class="excerpt excerpt-1">
-  <a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >MZ-NetBlog主题<i></i></a>
-			<h2><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" >用DTcms做一个独立博客网站（响应式模板）</a>
-			</h2>
-		</header>
-		<p class="meta">
-			<time class="time"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
-			<span class="views"><i class="glyphicon glyphicon-eye-open"></i> 216</span> <a class="comment" href="##comment" title="评论" target="_blank" ><i class="glyphicon glyphicon-comment"></i> 4</a>
-		</p>
-		<p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
-	</article>
-  <article class="excerpt excerpt-2"><a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >MZ-NetBlog主题<i></i></a>
-			<h2><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank" >用DTcms做一个独立博客网站（响应式模板）</a>
-			</h2>
-		</header>
-		<p class="meta">
-			<time class="time"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
-			<span class="views"><i class="glyphicon glyphicon-eye-open"></i>216</span> <a class="comment" href="##comment" title="评论" target="_blank" ><i class="glyphicon glyphicon-comment"></i>4</a>
-		</p>
-		<p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
-	</article>
-	
-	
+	<section class="container">
+		<div class="content-wrap">
+			<div class="content">
+				<div id="focusslide" class="carousel slide" data-ride="carousel">
+					<div class="title">
+						<h3>最新发布</h3>
+					</div>
 
+					<article class="excerpt excerpt-1">
+						<a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank"><img class="thumb"
+								data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+								alt="用DTcms做一个独立博客网站（响应式模板）" style="display: inline;"></a>
+						<header><a class="cat" href="#" title="MZ-NetBlog主题">MZ-NetBlog主题<i></i></a>
+							<h2><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank">用DTcms做一个独立博客网站（响应式模板）</a>
+							</h2>
+						</header>
+						<p class="meta">
+							<time class="time"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
+							<span class="views"><i class="glyphicon glyphicon-eye-open"></i> 216</span> <a class="comment"
+								href="##comment" title="评论" target="_blank"><i class="glyphicon glyphicon-comment"></i> 4</a>
+						</p>
+						<p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms
+							V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
+					</article>
 
+					<article class="excerpt excerpt-1">
+						<a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank"><img class="thumb"
+								data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+								alt="用DTcms做一个独立博客网站（响应式模板）" style="display: inline;"></a>
+						<header><a class="cat" href="#" title="MZ-NetBlog主题">MZ-NetBlog主题<i></i></a>
+							<h2><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank">用DTcms做一个独立博客网站（响应式模板）</a>
+							</h2>
+						</header>
+						<p class="meta">
+							<time class="time"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
+							<span class="views"><i class="glyphicon glyphicon-eye-open"></i> 216</span> <a class="comment"
+								href="##comment" title="评论" target="_blank"><i class="glyphicon glyphicon-comment"></i> 4</a>
+						</p>
+						<p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms
+							V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
+					</article>
 
-  <nav class="pagination" style="display: none;">
-	<ul>
-	  <li class="prev-page"></li>
-	  <li class="active"><span>1</span></li>
-	  <li><a href="?page=2">2</a></li>
-	  <li class="next-page"><a href="?page=2">下一页</a></li>
-	  <li><span>共 2 页</span></li>
-	</ul>
-  </nav>
-</div>
-</div>
-</div>
+					<article class="excerpt excerpt-2"><a class="focus" href="#" title="用DTcms做一个独立博客网站（响应式模板）"
+							target="_blank"><img class="thumb" data-original="images/201610181739277776.jpg"
+								src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）" style="display: inline;"></a>
+						<header><a class="cat" href="#" title="MZ-NetBlog主题">MZ-NetBlog主题<i></i></a>
+							<h2><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" target="_blank">用DTcms做一个独立博客网站（响应式模板）</a>
+							</h2>
+						</header>
+						<p class="meta">
+							<time class="time"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
+							<span class="views"><i class="glyphicon glyphicon-eye-open"></i>216</span> <a class="comment"
+								href="##comment" title="评论" target="_blank"><i class="glyphicon glyphicon-comment"></i>4</a>
+						</p>
+						<p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms
+							V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
+					</article>
 
-<aside class="sidebar">
-		<div class="fixed">
+				</div>
+			</div>
+		</div>
+
+		<aside class="sidebar">
+			<div class="fixed">
 				<div class="widget widget_search">
-				<form class="navbar-form" action="/Search" method="post">
-					<div class="input-group">
-					<input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15" autocomplete="off">
-					<span class="input-group-btn">
-					<button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
-					</span> </div>
-				</form>
+					<form class="navbar-form" action="/Search" method="post">
+						<div class="input-group">
+							<input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15"
+								autocomplete="off">
+							<span class="input-group-btn">
+								<button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+							</span> </div>
+					</form>
 				</div>
 			</div>
 
-			
-<div class="widget widget_hot">
-	  <h3>最新评论文章</h3>
-	  <ul>
-			
-<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#" ><span class="thumbnail">
-<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: block;">
-</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i class="glyphicon glyphicon-time"></i>
-2016-11-01
-</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
 
-<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#" ><span class="thumbnail">
-<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: block;">
-</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i class="glyphicon glyphicon-time"></i>
-2016-11-01
-</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+			<div class="widget widget_hot">
+				<h3>最新评论文章</h3>
+				<ul>
 
-<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#" ><span class="thumbnail">
-<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: block;">
-</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i class="glyphicon glyphicon-time"></i>
-2016-11-01
-</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
 
-<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#" ><span class="thumbnail">
-<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: block;">
-</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i class="glyphicon glyphicon-time"></i>
-2016-11-01
-</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
 
-	  </ul>
-  </div>
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
 
-</aside>
-</section>
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+
+				</ul>
+			</div>
+
+		</aside>
+	</section>
 
 
-<footer class="footer">
-<div class="container">
-<p>Copyright &copy; 2019.Weqan</p>
-</div>
-<div id="gotop"><a class="gotop"></a></div>
-</footer>
+	<footer class="footer">
+		<div class="container">
+			<p>Copyright &copy; 2019.Weqan</p>
+		</div>
+		<div id="gotop"><a class="gotop"></a></div>
+	</footer>
 
 
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.ias.js"></script>
-<script src="js/scripts.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.ias.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
+
 </html>
