--- a/show.html
+++ b/show.html
@@ -1,173 +1,179 @@
 <!doctype html>
 <html lang="zh-CN">
+
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>文章详情 - 纳米源</title>
-<meta name="keywords" content="nmyuan">
-<meta name="description" content="nmyuan">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/nprogress.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-<link rel="apple-touch-icon-precomposed" href="images/icon.png">
-<link rel="shortcut icon" href="images/yuan.ico">
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/nprogress.js"></script>
-<script src="js/jquery.lazyload.min.js"></script>
+	<meta charset="utf-8">
+	<meta name="renderer" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>文章页 - 纳米源</title>
+	<meta name="keywords" content="nmyuan">
+	<meta name="description" content="nmyuan">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/nprogress.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="apple-touch-icon-precomposed" href="images/icon.png">
+	<link rel="shortcut icon" href="images/yuan.ico">
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/nprogress.js"></script>
+	<script src="js/jquery.lazyload.min.js"></script>
 
 
 </head>
-<body class="user-select single">
-<header class="header">
 
-	<nav class="navbar navbar-default" id="navbar">
-		<div class="container">
-			<div class="header-topbar hidden-xs link-border">
-			<ul class="site-nav topmenu">
-				<li><a href="http://weqan.cn" >维千网</a></li>
-				<li><a href="https://github.com/weqan" title="GitHub" >
-					<i class="fa fa-github">
-					</i> 我的GitHub
-				</a></li>
-			</ul>
-					 勤记录 懂分享</div>
-			<div class="navbar-header">
-		
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar" aria-expanded="false"> <span class="sr-only"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-		
-			<h1 class="logo hvr-bounce-in"><a href="#" title="木庄网络博客"><img src="images/201610171329086541.png" alt="木庄网络博客"></a></h1>
+<body class="user-select single">
+	<header class="header">
+
+		<nav class="navbar navbar-default" id="navbar">
+			<div class="container">
+				<div class="header-topbar hidden-xs link-border">
+					<ul class="site-nav topmenu">
+						<li><a href="http://weqan.cn">维千网</a></li>
+						<li><a href="https://github.com/weqan" title="GitHub">
+								<i class="fa fa-github">
+								</i> 我的GitHub
+							</a></li>
+					</ul>
+					勤记录 懂分享
+				</div>
+				<div class="navbar-header">
+
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar"
+						aria-expanded="false"> <span class="sr-only"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> </button>
+
+					<h1 class="logo hvr-bounce-in"><a href="#" title="木庄网络博客"><img src="images/201610171329086541.png"
+								alt="木庄网络博客"></a></h1>
+				</div>
+				<div class="collapse navbar-collapse" id="header-navbar">
+					<form class="navbar-form visible-xs" action="/Search" method="post">
+						<div class="input-group">
+							<input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20"
+								autocomplete="off">
+							<span class="input-group-btn">
+								<button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+							</span> </div>
+					</form>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a data-cont="纳米源" title="纳米源" href="index.html">首页</a></li>
+						<li><a data-cont="我的笔记" title="我的笔记" href="#">我的笔记</a></li>
+						<li><a data-cont="源码分享" title="源码分享" href="#">源码分享</a></li>
+						<li><a data-cont="资讯分享" title="资讯分享" href="#">资讯分享</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="collapse navbar-collapse" id="header-navbar">
-			<form class="navbar-form visible-xs" action="/Search" method="post">
-				<div class="input-group">
-				<input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20" autocomplete="off">
-				<span class="input-group-btn">
-				<button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
-				</span> </div>
-			</form>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a data-cont="纳米源" title="纳米源" href="index.html">首页</a></li>
-				<li><a data-cont="我的笔记" title="我的笔记" href="#" >我的笔记</a></li>
-				<li><a data-cont="源码分享" title="源码分享" href="#" >源码分享</a></li>
-				<li><a data-cont="资讯分享" title="资讯分享" href="#" >资讯分享</a></li>
-			</ul>
-			</div>
-		</div>
 		</nav>
 
-</header>
-<section class="container">
-<div class="content-wrap">
-<div class="content">
-  <header class="article-header">
-	<h1 class="article-title"><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" >用DTcms做一个独立博客网站（响应式模板）</a></h1>
-	<div class="article-meta"> <span class="item article-meta-time">
-	  <time class="time" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="发表时间：2016-10-14"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
-		</span> <span class="item article-meta-source" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="来源：木庄网络博客"><i class="glyphicon glyphicon-globe"></i> 木庄网络博客</span> <span class="item article-meta-category" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="MZ-NetBlog主题"><i class="glyphicon glyphicon-list"></i> <a href="#" title="MZ-NetBlog主题" >MZ-NetBlog主题</a></span> <span class="item article-meta-views" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="浏览量：219"><i class="glyphicon glyphicon-eye-open"></i> 219</span> 
-	 </div>
-  </header>
-  <article class="article-content">
-	<p>文章效果示例，文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字。</p>
-	<pre class="prettyprint lang-cs">代码示例：
-	public static double JieCheng(int number)
-	{
-		if (number == 0)
-		{
-			return 0;
-		}
+	</header>
+	<section class="container">
+		<div class="content-wrap">
+			<div class="content">
+				<header class="article-header">
+					<h1 class="article-title"><a href="#" title="用DTcms做一个独立博客网站（响应式模板）">用DTcms做一个独立博客网站（响应式模板）</a></h1>
+					<div class="article-meta"> <span class="item article-meta-time">
+							<time class="time" data-toggle="tooltip" data-placement="bottom" title=""
+								data-original-title="发表时间：2016-10-14"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
+						</span> <span class="item article-meta-source" data-toggle="tooltip" data-placement="bottom" title=""
+							data-original-title="来源：木庄网络博客"><i class="glyphicon glyphicon-globe"></i> 木庄网络博客</span> 
+						<span	class="item article-meta-category" data-toggle="tooltip" data-placement="bottom" title=""
+							data-original-title="MZ-NetBlog主题"><i class="glyphicon glyphicon-list"></i> <a href="#"
+								title="MZ-NetBlog主题">MZ-NetBlog主题</a></span> 
+						<span class="item article-meta-views" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="浏览量：219"><i	class="glyphicon glyphicon-eye-open"></i> 219</span>
+					</div>
+				</header>
+				<article class="article-content">
+					<p>
+						文章效果示例，文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字。
+					</p>
+					<pre class="prettyprint lang-cs">代码示例：
+						public static double JieCheng(int number)
+						{
+							if (number == 0)
+							{
+								return 0;
+							}
 
-		//初始值必须设置为1
-		double result = 1; 
+							//初始值必须设置为1
+							double result = 1; 
 
-		for (int i = number; i &gt;= 1; i--)
-		{
-			result = result*i;
-		}
-		return result;
-	}</pre>
-	
-
-
-  </article>
-  <div class="article-tags">标签：<a href="#list/2/" rel="tag" >DTcms博客</a><a href="#list/3/" rel="tag" >木庄网络博客</a><a href="#list/4/" rel="tag" >独立博客</a><a href="#list/5/" rel="tag" >修复优化</a>
-	</div>
-  <div class="relates">
-	<div class="title">
-	  <h3>相关推荐</h3>
-	</div>
-	<ul>
-	  <li><a href="#" title="" >用DTcms做一个独立博客网站（响应式模板）-MZ-NetBlog主题</a></li>
-	  <li><a href="#" title="" >用DTcms做一个独立博客网站（响应式模板）-MZ-NetBlog主题</a></li>
-	  
-	</ul>
-	</div>
-	
-
-</div>
-</div>
-
-
-<aside class="sidebar">
-<div class="fixed">
-  <div class="widget widget-tabs">
-	<ul class="nav nav-tabs" role="tablist">
-	  <li role="presentation" class="active"><a href="#notice" aria-controls="notice" role="tab" data-toggle="tab" draggable="false">统计信息</a></li>
-	  <li role="presentation"><a href="#contact" aria-controls="contact" role="tab" data-toggle="tab" draggable="false">联系站长</a></li>
-	</ul>
-	<div class="tab-content">
-	  <div role="tabpanel" class="tab-pane contact active" id="notice">
-		<h2>日志总数:
-			  888篇
-		  </h2>
-		  <h2>网站运行:
-		  <span id="sitetime">88天 </span></h2>
-	  </div>
-		<div role="tabpanel" class="tab-pane contact" id="contact">
-		  <h2>QQ:
-			  <a href="" target="_blank" rel="nofollow" data-toggle="tooltip" data-placement="bottom" title="" draggable="false" data-original-title="QQ:577211782">577211782</a>
-		  </h2>
-		  <h2>Email:
-		  <a href="mailto:577211782@qq.com" target="_blank" data-toggle="tooltip" rel="nofollow" data-placement="bottom" title="" draggable="false" data-original-title="Email:577211782@qq.com">577211782@qq.com</a></h2>
-	  </div>
-	</div>
-  </div>
+							for (int i = number; i &gt;= 1; i--)
+							{
+								result = result*i;
+							}
+							return result;
+						}
+					</pre>
 
 
 
-</div>
-<div class="widget widget_hot">
-	  <h3>最新评论文章</h3>
-	  <ul>
-		
+				</article>
+				<div class="article-tags">标签：
+						<a href="#list/2/" rel="tag">DTcms博客</a>
+						<a href="#list/3/" rel="tag">维千网</a>
+						<a href="#list/4/" rel="tag">独立博客</a>
+						<a href="#list/5/" rel="tag">修复优化</a>
+				</div>
+				<div class="relates">
+					<div class="title">
+						<h3>相关推荐</h3>
+					</div>
+					<ul>
+						<li><a href="#" title="">用DTcms做一个独立博客网站（响应式模板）-MZ-NetBlog主题</a></li>
+						<li><a href="#" title="">用DTcms做一个独立博客网站（响应式模板）-MZ-NetBlog主题</a></li>
 
-<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#" ><span class="thumbnail">
-<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: block;">
-</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i class="glyphicon glyphicon-time"></i>
-2016-11-01
-</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
-<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#" ><span class="thumbnail">
-<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: block;">
-</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i class="glyphicon glyphicon-time"></i>
-2016-11-01
-</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+					</ul>
+				</div>
 
-	  </ul>
-  </div>
-  
 
-</aside>
-</section>
-<footer class="footer">
-<div class="container">
- <p>Copyright &copy; 2019.Weqan</p>
-</div>
-<div id="gotop"><a class="gotop"></a></div>
-</footer>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.ias.js"></script>
-<script src="js/scripts.js"></script>
+			</div>
+		</div>
+
+
+		<aside class="sidebar">
+
+			<div class="widget widget_hot">
+				<h3>最新评论文章</h3>
+				<ul>
+
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+
+					<li><a title="用DTcms做一个独立博客网站（响应式模板）" href="#"><span class="thumbnail">
+								<img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"
+									alt="用DTcms做一个独立博客网站（响应式模板）" style="display: block;">
+							</span><span class="text">用DTcms做一个独立博客网站（响应式模板）</span><span class="muted"><i
+									class="glyphicon glyphicon-time"></i>
+								2016-11-01
+							</span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i>88</span></a></li>
+				</ul>
+			</div>
+
+
+		</aside>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<p>Copyright &copy; 2019.Weqan</p>
+		</div>
+		<div id="gotop"><a class="gotop"></a></div>
+	</footer>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.ias.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
+
 </html>
