--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 			</div>
 		</div>
 
+		<aside class="sidebar">
 			<div class="fixed">
 				<div class="widget widget-tabs">
 					<ul class="nav nav-tabs" role="tablist">
