--- a/show.html
+++ b/show.html
@@ -86,23 +86,24 @@
 					<p>
 						文章效果示例，文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字。
 					</p>
-					<pre class="prettyprint lang-cs">代码示例：
-						public static double JieCheng(int number)
-						{
-							if (number == 0)
-							{
-								return 0;
-							}
+					<pre class="prettyprint lang-cs">
+代码示例：
+public static double JieCheng(int number)
+{
+	if (number == 0)
+	{
+		return 0;
+	}
 
-							//初始值必须设置为1
-							double result = 1; 
+	//初始值必须设置为1
+	double result = 1; 
 
-							for (int i = number; i &gt;= 1; i--)
-							{
-								result = result*i;
-							}
-							return result;
-						}
+	for (int i = number; i &gt;= 1; i--)
+	{
+		result = result*i;
+	}
+	return result;
+}
 					</pre>
 
 
